# holocraft

./: .gitattributes  .gitignore  .prettierignore  package-lock.json  package.json  pyproject.toml  rollup.config.js  tailwind.config.js  tsconfig.json  update_holocraft.py
.github/workflows/: update_data.yml
.husky/: pre-commit
docs/: holocraft.json  index.html
docs/data/: holocraft.json
src/: DateMark.svelte  FilterGeneration.svelte  FilterSummary.svelte  Holocraft.svelte  MemberStreamMark.svelte  Playlist.svelte  PlaylistRow.svelte  Tailwind.svelte  Thumbnail.svelte  Timeline.svelte  TimelineFilters.svelte  TimelineLeaf.svelte  TimelineMark.svelte  TimelineTree.svelte  Toggle.svelte  VideoPlayer.svelte  ViewSettings.svelte  data-store.ts  dnd.d.ts  holocraft.ts
src/data/: dataStore.ts  dateTree.ts  members.ts  storeUtils.ts  videoPlayerStore.ts  viewStore.ts
updater/: holocraft_all.json  holocraft_data.py  regenerate_client_json.py  stats.py  update_holocraft.py  youtube.py
updater/migrations/: 2021_02_23_update_member_info.py  2021_03_04_add_video_thumbnail_title.py  2021_06_12_add_video_duration.py  regenerate_sync_json.py
