[tool.poetry]
name = "holocraft"
version = "0.1.0"
description = ""
authors = ["Jeff Tao <jatao88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.15.0"
requests = "^2.25.1"
dataclasses-json = "^0.5.2"
marshmallow = "^3.10.0"
python-dateutil = "^2.8.1"
marshmallow-polyfield = "^5.10"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
